fix: bg color & color contrast for task item

--- a/src/index.css
+++ b/src/index.css
@@ -30,8 +30,8 @@ body {
   color: #333;
   font-size: 16px;
   /* background-color: #26c6da; */
-  background-color: #da26d4;
-  /* background-color: #f2f2f2; */
+  /* background-color: #da26d4; */
+  background-color: #f2f2f2;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
@@ -345,8 +345,8 @@ textarea {
 
 .list-item.TASK_ARCHIVED input[type="text"] {
   /* TODO: REPLACE */
-  color: #a0aec0; 
-  /* color: #4a5568; */
+  /* color: #a0aec0;  */
+  color: #4a5568;
   text-decoration: line-through;
 }
 
